<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_events">Events</string>
    <string name="action_map">Map</string>

    <string name="app_name">Farrow</string>

    <string name="fab_tooltip_my_location">My location</string>
    <string name="fab_tooltip_scroll_to_top">Scroll to top</string>

    <string name="menu_map_style">Map Style</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite Streets</string>
    <string name="menu_map_style_streets">Mapbox Streets</string>

    <string name="subhead">Subhead</string>

    <string name="title">Title</string>

    <string name="user_location_permission_not_granted">Location permission not granted</string>

    <string name="zoom_to_all_markers">Zoom to all markers</string>
</resources>
